<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoffeeCart</string>
    <string name="title_activity_add_vip">Add VIP Customer</string>
    <string name="title_activity_find_vip">Find VIP Customer</string>
    <string name="title_activity_edit_vip">View VIP Customer</string>
    <string name="title_addVip">Add</string>
    <string name="title_editVip">Edit</string>
    <string name="title_dailyReport">Daily Report</string>
    <string name="notImplemented">Not Implemented</string>
    <string name="form_id">ID</string>
    <string name="form_name">Name</string>
    <string name="form_phone">Phone Number</string>
    <string name="form_dob">Date of Birth</string>
    <string name="form_dob_format">yyyy-mm-dd</string>
    <string name="form_vip_id">VIP ID</string>
    <string name="form_submit">Submit</string>
    <string name="form_find_vip">Find VIP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preorder">Preorder</string>
    <string name="preorder_button">Preorder</string>
    <string name="add_item_button">Add Item</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="preorder_items">PreOrder Items</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="preorder_submit">Submit</string>
    <string name="preorder_clear">Clear All</string>
    <string name="preorder_total_label">Total price :</string>
    <string name="preorder_total_value">Value</string>
    <string name="preorder_cart_price_label">Price</string>
    <string name="preorder_cart_quantity_label">Quantity</string>
    <string name="preorder_cart_Sno_label">S.No.</string>
    <string name="preorder_cart_item_label">Item Name</string>
    <string name="preorder_cart_ddate_label">Delivery Date</string>
    
    <string name="preorder_cart_title">Preorder Cart</string>
    <string name="title_activity_purchase">Record Purchase</string>
    <string name="title_activity_record_purchase">Record Purchase</string>
    <string name="available_items_title">Available Items</string>
    <string name="points_label">points</string>
    <string name="gold_label">(GOLD)</string>
    <string name="delete_button">Delete</string>
    <string name="delete_confirm">Delete</string>
    <string name="delete_cancel">No</string>

    <string-array name="items">
        <item>Coffee ($1.50)</item>
        <item>Cookie ($2.00)</item>
        <item>Brownie ($2.50)</item>
        <item>Milkshake ($4.00)</item>
    </string-array>

    <string name="title_activity_purchase_activity2">PurchaseActivity2</string>
    <string name="title_activity_daily_report">Daily Report</string>
    <string name="cart_id_label">Cart ID:</string>
    <string name="textview_vip_activities">VIP Accounts</string>
    <string name="textview_vip_purchases">VIP Transactions</string>
    <string name="textview_vip_report">Reporting</string>
    <string name="button_purchase">Purchase</string>

</resources>
