<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gatech.cs6300.project2.PreorderActivity$PlaceholderFragment" >

    <ListView
        android:id="@+id/preorderCart"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignRight="@+id/preorderdate"
        android:layout_below="@+id/button1"
        android:layout_marginTop="50dp" >

    </ListView>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/preorderdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:onClick="allitems"
        android:text="@string/add_item_button" />

    <EditText
        android:id="@+id/preorderdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Deliverydate"
        android:layout_toRightOf="@+id/Deliverydate"
        android:ems="10"
        android:hint="@string/form_dob_format"
        android:inputType="date" />

    <TextView
        android:id="@+id/preorderItemsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/preorder_items"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/Deliverydate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/submitpreorderbutton"
        android:layout_below="@+id/preorderItemsHeader"
        android:layout_marginTop="14dp"
        android:text="@string/delivery_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/submitpreorderbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/preorderItemsHeader"
        android:layout_alignParentBottom="true"
        android:onClick="submitPreOrder"
        android:text="@string/preorder_submit" />

    <Button
        android:id="@+id/clearallbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/submitpreorderbutton"
        android:layout_alignBottom="@+id/submitpreorderbutton"
        android:layout_alignRight="@+id/preorderItemsHeader"
        android:onClick="clearCart"
        android:text="@string/preorder_clear" />

    <TextView
        android:id="@+id/preordertotaltextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitpreorderbutton"
        android:layout_toLeftOf="@+id/preordertotalvaluetextView"
        android:text="@string/preorder_total_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/preordertotalvaluetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clearallbutton"
        android:layout_alignRight="@+id/cartheadertextView"
        android:text="@string/preorder_total_value"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/cartheadertextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/preorder_cart_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/cartHeaderPricetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cartHeaderQuantitytextView"
        android:layout_alignBottom="@+id/cartHeaderQuantitytextView"
        android:layout_alignParentRight="true"
        android:text="@string/preorder_cart_price_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/cartHeaderQuantitytextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cartHeaderItemtextView"
        android:layout_alignBottom="@+id/cartHeaderItemtextView"
        android:layout_toRightOf="@+id/cartheadertextView"
        android:layout_marginLeft="9dp"
        android:text="@string/preorder_cart_quantity_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/cartHeaderItemtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cartIHeaderSnotextView"
        android:layout_below="@+id/cartheadertextView"
        android:layout_marginLeft="32dp"
        
        android:text="@string/preorder_cart_item_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/cartIHeaderSnotextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cartHeaderItemtextView"
        android:layout_alignBottom="@+id/cartHeaderItemtextView"
        android:layout_alignParentLeft="true"
        android:text="@string/preorder_cart_Sno_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
