<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dip" >
    
     <TextView
        android:id="@+id/pricetextView"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_alignBaseline="@+id/quantitytextView"
        android:layout_alignBottom="@+id/quantitytextView"
        android:layout_alignParentRight="true"
        android:text="@string/preorder_cart_price_label" 
        android:textColor="@android:color/black" />

     <TextView
         android:id="@+id/ItemNametextView"
         android:layout_width="wrap_content"
         android:layout_height="15dp"
         android:layout_alignBaseline="@+id/serialnotextView"
         android:layout_alignBottom="@+id/serialnotextView"
         android:layout_toRightOf="@+id/serialnotextView"
         android:text="@string/preorder_cart_item_label"
         android:textColor="@android:color/black" />

     <TextView
         android:id="@+id/quantitytextView"
         android:layout_width="wrap_content"
         android:layout_height="15dp"
         android:layout_above="@+id/deliverydatetextview"
         android:layout_marginRight="35dp"
         android:layout_toLeftOf="@+id/pricetextView"
         android:text="@string/preorder_cart_quantity_label"
         android:textColor="@android:color/black" />

     <TextView
         android:id="@+id/serialnotextView"
         android:layout_width="wrap_content"
         android:layout_height="15dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="@string/preorder_cart_Sno_label"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@android:color/black"  />

     <TextView
         android:id="@+id/deliverydatetextview"
         android:layout_width="wrap_content"
         android:layout_height="15dp"
         android:layout_below="@+id/ItemNametextView"
         android:layout_toRightOf="@+id/serialnotextView"
         android:text="@string/preorder_cart_ddate_label" 
         android:textColor="@android:color/black" />
  
</RelativeLayout>