<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        tools:context="gatech.cs6300.project2.MainActivity$PlaceholderFragment" >
        
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <TextView
	        android:id="@+id/cartIdLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:clickable="true"
	        android:onClick="editCartId"
	        android:text="@string/cart_id_label" />
	
	    <TextView
	        android:id="@+id/cartId"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/cartIdLabel"
	        android:layout_alignBottom="@+id/cartIdLabel"
	        android:layout_toRightOf="@+id/cartIdLabel"
	        android:clickable="true"
	        android:onClick="editCartId"
	        android:text="" />
	

       <RelativeLayout
            android:id="@+id/View1"
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cartIdLabel"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" >
            
		    <Button
		        android:id="@+id/editVipButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/addVipButton"
		        android:layout_centerHorizontal="true"
		        android:minHeight="32dp"
		        android:minWidth="150dp"
		        android:onClick="editVip"
		        android:text="@string/title_editVip"
		        android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp" />
		
		    <Button
		        android:id="@+id/addVipButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/textView1"
		        android:layout_centerHorizontal="true"
		        android:minHeight="32dp"
		        android:minWidth="150dp"
		        android:onClick="addVip"
		        android:text="@string/title_addVip" />
		    
		    <Button
	            android:id="@+id/delete_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/editVipButton"
	            android:layout_below="@+id/editVipButton"
	            android:minHeight="32dp"
	            android:minWidth="150dp"
	            android:layout_marginBottom="5dp"
	            android:onClick="deleteVip"
	            android:text="@string/delete_button" />
		
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="4dp"
		        android:text="@string/textview_vip_activities"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
	    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/View1"
            android:layout_alignLeft="@+id/View1"
            android:layout_below="@+id/View1"
            android:background="@drawable/rounded_corner" 
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" >
		    
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
		        android:layout_marginTop="4dp"
		        android:text="@string/textview_vip_purchases"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <Button
		        android:id="@+id/purchaseButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/textView2"
		        android:layout_centerHorizontal="true"
		        android:minHeight="32dp"
		        android:minWidth="150dp"
		        android:onClick="purchase"
		        android:text="@string/button_purchase" />
		    
		    <Button
	            android:id="@+id/preorder_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/purchaseButton"
	            android:layout_below="@+id/purchaseButton"
	            android:minHeight="32dip"
	            android:minWidth="150dip"
	            android:onClick="preorder"
	            android:layout_marginBottom="5dp"
	            android:text="@string/preorder_button" />
		    
        </RelativeLayout>
	    
        <RelativeLayout
            android:id="@+id/View3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view2"
            android:layout_alignRight="@+id/view2"
            android:layout_below="@+id/view2"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" >
	
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="4dp"
		        android:text="@string/textview_vip_report"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <Button
	                android:id="@+id/dailyReportButton"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerHorizontal="true"
	                android:layout_below="@+id/textView3"
	                android:layout_marginBottom="5dp"
	                android:minHeight="32dip"
	                android:minWidth="150dip"
	                android:onClick="dailyReport"
	                android:text="@string/title_dailyReport" />
		</RelativeLayout>
	
	</RelativeLayout>
</ScrollView>