<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    tools:context="gatech.cs6300.project2.EditVipActivity$EditVipFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
    
       <RelativeLayout
           android:id="@+id/View1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_centerHorizontal="true"
           android:layout_marginBottom="5dp"
           android:layout_marginTop="5dp"
           android:background="@drawable/rounded_corner"
           tools:ignore="UselessParent" >

		    <TextView
		        android:id="@+id/form_name_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_marginTop="25dp"
		        android:labelFor="@+id/form_name_field"
		        android:text="@string/form_name" />
		
		    <TextView
		        android:id="@+id/form_id_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:text="@string/form_id" />
		
		    <TextView
		        android:id="@+id/form_id_field"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/form_id_label"
		        android:layout_toLeftOf="@+id/submitEditVip"
		        android:layout_toRightOf="@+id/form_phone_label"
		        android:text="" />		    
		    
		    <TextView
		        android:id="@+id/vip_gold_status"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/form_id_field"
		        android:layout_alignParentTop="true"
		        android:text="@string/gold_label"
		        android:layout_alignParentRight="true"
		        android:visibility="invisible" />
		    
		    <TextView
		        android:id="@+id/vip_point_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/vip_gold_status"
		        android:layout_alignBottom="@+id/vip_gold_status"
		        android:layout_toLeftOf="@+id/vip_gold_status"
		        android:layout_marginRight="3dp"
		        android:text="@string/points_label" />
		
		    <TextView
		        android:id="@+id/vip_point_total"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/vip_point_label"
		        android:layout_alignBottom="@+id/vip_point_label"
		        android:layout_toLeftOf="@+id/vip_point_label"
		        android:layout_marginRight="3dp"
		        android:text="0" />
		
		    <Button
		        android:id="@+id/submitEditVip"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/form_dob_field"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="15dp"
		        android:onClick="editVip"
		        android:text="@string/form_submit" />
		
		    <Button
		        android:id="@+id/purchase_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/form_dob_field"
		        android:layout_centerHorizontal="true"
		        android:onClick="purchase"
		        android:text="Purchase" />
		
		    <Button
		        android:id="@+id/preorder_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/form_dob_field"
		        android:layout_centerHorizontal="true"
		        android:onClick="preOrder"
		        android:text="@string/preorder_button" />
		
		    <Button
		        android:id="@+id/delete_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/form_dob_field"
		        android:layout_centerHorizontal="true"
		        android:onClick="askBeforeDelete"
		        android:text="@string/delete_button" />

		    <EditText
		        android:id="@+id/form_dob_field"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/form_phone_field"
		        android:layout_alignRight="@+id/form_phone_field"
		        android:layout_below="@+id/form_dob_label"
		        android:ems="10"
		        android:hint="@string/form_dob_format"
		        android:inputType="date"
		        android:selectAllOnFocus="true" >

		        <requestFocus />
		    </EditText>

		    <EditText
		        android:id="@+id/form_phone_field"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/form_name_field"
		        android:layout_alignRight="@+id/form_name_field"
		        android:layout_alignTop="@+id/form_phone_label"
		        android:layout_marginTop="18dp"
		        android:ems="10"
		        android:inputType="phone"
		        android:selectAllOnFocus="true" />

		    <TextView
		        android:id="@+id/form_phone_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:layout_alignLeft="@+id/form_name_label"
		        android:layout_below="@+id/form_name_field"
		        android:labelFor="@+id/form_phone_field"
		        android:text="@string/form_phone" />

		    <EditText
		        android:id="@+id/form_name_field"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignRight="@+id/vip_gold_status"
		        android:layout_below="@+id/form_name_label"
		        android:layout_toRightOf="@+id/form_name_label"
		        android:ems="10"
		        android:inputType="textPersonName"
		        android:selectAllOnFocus="true" />

		    <TextView
		        android:id="@+id/form_dob_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:layout_alignLeft="@+id/form_phone_label"
		        android:layout_below="@+id/form_phone_field"
		        android:labelFor="@+id/form_dob_field"
		        android:text="@string/form_dob" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
