<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    tools:context="gatech.cs6300.project2.AddVipActivity$PlaceholderFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
    
	   <RelativeLayout
	       android:id="@+id/View1"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_alignParentTop="true"
	       android:layout_centerHorizontal="true"
	       android:layout_marginBottom="5dp"
	       android:layout_marginTop="5dp"
	       android:background="@drawable/rounded_corner"
	       tools:ignore="UselessParent" >
	
	        <Button
	            android:id="@+id/submitAddVip"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/form_dob_field"
	            android:layout_centerHorizontal="true"
	            android:layout_marginBottom="5dp"
	            android:layout_marginTop="15dp"
	            android:onClick="addVip"
	            android:text="@string/form_submit" />
	
	        <EditText
	            android:id="@+id/form_phone_field"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/form_name_field"
	            android:layout_below="@+id/form_phone_label"
	            android:ems="10"
	            android:inputType="phone"
	            android:selectAllOnFocus="true" />

	        <TextView
	            android:id="@+id/form_name_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/form_phone_label"
	            android:layout_alignParentTop="true"
	            android:layout_marginTop="5dp"
	            android:labelFor="@+id/form_name_field"
	            android:text="@string/form_name" />
	
	        <TextView
	            android:id="@+id/form_phone_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/form_name_field"
	            android:layout_marginTop="15dp"
	            android:labelFor="@+id/form_phone_field"
	            android:text="@string/form_phone" />
	
	        <TextView
	            android:id="@+id/form_dob_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/form_phone_field"
	            android:layout_marginTop="15dp"
	            android:labelFor="@+id/form_dob_field"
	            android:text="@string/form_dob" />
	
	        <EditText
	            android:id="@+id/form_dob_field"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/form_phone_field"
	            android:layout_below="@+id/form_dob_label"
	            android:ems="10"
	            android:hint="@string/form_dob_format"
	            android:inputType="date"
	            android:selectAllOnFocus="true" />
	
	        <EditText
	            android:id="@+id/form_name_field"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/form_name_label"
	            android:layout_toRightOf="@+id/form_name_label"
	            android:ems="10"
	            android:inputType="textPersonName"
	            android:selectAllOnFocus="true" >
	            <requestFocus />
	        </EditText>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>